--- a/mtgordle-app/package.json
+++ b/mtgordle-app/package.json
@@ -5,14 +5,15 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.8.0",
     "react": "^18.1.0",
-    "react-cookie": "^4.1.1",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
-    "react-toastify": "^9.0.3",
+    "react-toastify": "^9.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
