--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "node-schedule": "^2.1.0"
+    "node-cron": "^3.0.1",
+    "node-schedule": "^2.1.0",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "18.2.0"
